--- a/style.css
+++ b/style.css
@@ -297,3 +297,45 @@ table {
 }
 
 /* ----- end of banner style -----*/
+
+/* ----- start of spotlight style -----*/
+.spotlight__title {
+  padding: 0 2rem;
+  margin: 1.3rem 0;
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+.spotlight__contaner {
+  display: flex;
+}
+
+.spotlight__item {
+  position: relative;
+  width: 25%;
+}
+
+.spotlight-item__info {
+  width: 100%;
+  position: absolute;
+  bottom: 1.25rem;
+  padding: 0 2rem;
+  color: #666666;
+}
+
+.spotlight-item__thumbnail {
+  position: absolute;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.spotlight-item__brand {
+  margin-left: 4rem;
+  font-size: 0.875rem;
+}
+
+.spotlight-item__name {
+  margin-left: 4rem;
+}
+/* ----- end of spotlight style -----*/
