--- a/style.css
+++ b/style.css
@@ -48,6 +48,10 @@ table {
   border-spacing: 0;
 }
 
+ul {
+  list-style: none;
+}
+
 /* ----- end of reset style-----*/
 
 /* ----- start of header style -----*/
@@ -410,6 +414,7 @@ table {
 .editorial {
   padding: 0 2rem;
   width: 100%;
+  margin-bottom: 7.5rem;
 }
 
 .editorial__title-container {
@@ -472,3 +477,84 @@ table {
   line-height: 1.4;
 }
 /* ----- end of editorial style -----*/
+
+/* ----- start of ranking style -----*/
+
+.ranking {
+  padding: 0 2rem;
+}
+
+.ranking__container {
+  position: relative;
+}
+
+.ranking__title-container {
+}
+
+.ranking__title {
+  margin: 1.3rem 0;
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+.ranking__more {
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-size: 0.75rem;
+  font-weight: 400;
+  border: solid 1px #eee;
+  border-radius: 0.25rem;
+  color: #999;
+  padding: 0.25rem 0.75rem;
+  line-height: 1.4;
+}
+
+.ranking__list {
+  width: 100%;
+  height: 33.25rem;
+  margin: 0 -1rem;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.ranking__item-wrapper {
+  width: 25%;
+  padding: 0 0.75rem;
+}
+
+.ranking__item {
+  display: flex;
+  flex: 1 1 25%;
+  height: 5.625rem;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.ranking-item__num {
+  width: 2.5rem;
+  font-size: 1.5rem;
+  color: #666666;
+  text-align: center;
+}
+
+.ranking-item__img-wrapper {
+  width: 7.5rem;
+  height: 5.625rem;
+  text-align: center;
+}
+.ranking-item__img {
+  border-radius: 0.25rem;
+  height: 100%;
+  width: auto;
+  margin: 0 auto;
+}
+.ranking-item__info {
+  flex: 1;
+}
+.ranking-item__brand {
+  font-size: 0.875rem;
+  color: #666666;
+}
+/* ----- end of ranking style -----*/
