--- a/style.css
+++ b/style.css
@@ -54,6 +54,10 @@ ul {
 
 /* ----- end of reset style-----*/
 
+.wrap {
+  /* position: relative; */
+}
+
 /* ----- start of header style -----*/
 
 .header {
@@ -482,13 +486,14 @@ ul {
 
 .ranking {
   padding: 0 2rem;
+  margin-bottom: 7.5rem;
 }
 
 .ranking__container {
-  position: relative;
 }
 
-.ranking__title-container {
+.ranking__titile-container {
+  position: relative;
 }
 
 .ranking__title {
@@ -558,3 +563,216 @@ ul {
   color: #666666;
 }
 /* ----- end of ranking style -----*/
+
+/* ----- start of footer style ----- */
+.footer {
+  background: #f7f7f7;
+}
+.footer__section {
+  border-top: solid 1px #eee;
+  padding: 2rem 0 2.25rem;
+}
+.footer__container {
+  display: flex;
+  padding: 0 2rem;
+}
+
+.footer__category-container {
+  flex: 0 1 55%;
+  padding-right: 2rem;
+}
+
+.category__title {
+  display: inline-block;
+  margin-right: 0.3125rem;
+  margin-bottom: 2rem;
+  font-size: 0.875rem;
+  font-weight: 500;
+}
+.category__count {
+  display: inline-block;
+  color: #999;
+  font-size: 0.875rem;
+  font-weight: 500;
+}
+.category__sub-category {
+  display: flex;
+}
+
+.sub-category__name {
+  flex: 0 0 5rem;
+  margin: 0 1rem 0.3125rem 0;
+  color: #999;
+  font-size: 0.875rem;
+}
+
+.sub-category__list {
+  display: flex;
+}
+
+.sub-category__item {
+  margin: 0 0.625rem 0.3125rem 0;
+  font-size: 0.875rem;
+}
+
+.footer__img-container {
+  display: flex;
+}
+
+.footer__img-item-wrapper {
+  width: 11rem;
+  padding-right: 1rem;
+}
+.footer__img-item-wrapper:last-child {
+  width: 10rem;
+  padding-right: 0;
+}
+
+.footer__img-item {
+  position: relative;
+  border-radius: 0.25rem;
+  overflow: hidden;
+}
+
+.img-item__img {
+  width: 100%;
+  height: 100%;
+  filter: brightness(0.9);
+}
+
+.img-item__info {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.img-item__name {
+  color: #ffffff;
+  font-size: 0.75rem;
+}
+
+/* footer info section */
+.footer-info {
+  border-top: solid 1px #eee;
+  padding: 2rem 2rem 2.25rem 2rem;
+}
+
+.footer-info__container {
+  position: relative;
+}
+
+.footer-info__title {
+  display: inline-block;
+  margin-bottom: 0.5rem;
+  font-size: 0.875rem;
+  font-weight: 500;
+}
+.footer-info__sns-list {
+  display: inline-block;
+  margin-left: 1.3rem;
+}
+.footer-info__sns-item {
+  display: inline-block;
+  margin-right: 0.6rem;
+  width: 1rem;
+  height: 1rem;
+}
+
+.footer-info__menu {
+  display: flex;
+  margin-bottom: 1rem;
+  width: calc(100% - 480px);
+}
+
+.footer-info__menu-item {
+  color: #999;
+  font-size: 0.875rem;
+  margin-right: 1rem;
+}
+
+.footer-info__newsletter {
+  position: absolute;
+  right: 2rem;
+  top: 0;
+  width: 440px;
+}
+
+.newsletter__title {
+  font-size: 0.875rem;
+  font-weight: 500;
+  margin-bottom: 0.5rem;
+}
+
+.newsletter__form {
+  display: flex;
+  width: 100%;
+}
+
+.newsletter__email {
+  display: inline-block;
+  width: calc(100% - 10.3125rem);
+  border: none;
+  border-radius: 0.2rem;
+  margin-right: 0.3125rem;
+  height: 2.5rem;
+  font-size: 0.875rem;
+  padding: 0 1rem;
+  outline: none;
+}
+
+.newsletter__submit {
+  display: inline-block;
+  width: 10rem;
+  height: 2.5rem;
+  background-color: #000000;
+  border-radius: 0.375rem;
+  color: #ffffff;
+  font-size: 0.875rem;
+}
+
+.newsletter_desc {
+  width: 80%;
+  margin-top: 0.5rem;
+  color: #999;
+  font-size: 0.75rem;
+  word-break: keep-all;
+}
+
+.footer-info__company-info-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 0.25rem;
+  width: calc(100% - 480px);
+}
+
+.footer-info__company-info-item {
+  color: #999;
+  font-size: 0.75rem;
+  margin-right: 1rem;
+}
+
+.footer-info__policy-info-list {
+  display: flex;
+  flex-wrap: wrap;
+  width: calc(100% - 480px);
+}
+
+.footer-info__policy-info-item {
+  color: #999;
+  font-size: 0.75rem;
+  margin-right: 1rem;
+}
+
+/* ----- end of footer style ----- */
+
+.chat-btn {
+  position: fixed;
+  right: 1.5rem;
+  bottom: 1.5rem;
+  width: 5rem;
+  height: 5rem;
+}
