feat. 반응형 max-width : 1280px 화면

--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ ul {
 
 .header {
   position: fixed;
+  background-color: #ffffff;
   z-index: 100;
   display: flex;
   align-items: center;
@@ -157,6 +158,8 @@ ul {
 }
 
 .sub-nav__nav-item {
+  display: flex;
+  align-items: center;
   font-size: 0.875rem;
   font-weight: 700;
   padding: 0.25rem 0.5rem;
@@ -358,10 +361,28 @@ ul {
   width: 100%;
   margin-bottom: 7.5rem;
 }
+
+.curation__title-container {
+  position: relative;
+}
+
 .curation__title {
   margin: 1.3rem 0;
   font-size: 1.5rem;
   font-weight: 700;
+}
+
+.curation__more {
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-size: 0.75rem;
+  font-weight: 400;
+  border: solid 1px #eee;
+  border-radius: 0.25rem;
+  color: #999;
+  padding: 0.25rem 0.75rem;
+  line-height: 1.4;
 }
 
 .curation__item-container {
@@ -446,6 +467,7 @@ ul {
 .editorial__item-container {
   display: flex;
   margin: 0 -1rem;
+  padding-top: 1rem;
 }
 
 .editorial__item {
@@ -492,7 +514,7 @@ ul {
 .ranking__container {
 }
 
-.ranking__titile-container {
+.ranking__title-container {
   position: relative;
 }
 
@@ -608,6 +630,8 @@ ul {
 
 .sub-category__list {
   display: flex;
+  flex-wrap: wrap;
+  flex-shrink: 1;
 }
 
 .sub-category__item {
@@ -769,10 +793,119 @@ ul {
 
 /* ----- end of footer style ----- */
 
+/* fixed chat button */
 .chat-btn {
   position: fixed;
   right: 1.5rem;
   bottom: 1.5rem;
   width: 5rem;
   height: 5rem;
+}
+
+@media (max-width: 1280px) {
+  .header {
+    height: 64px;
+    padding: 0.75rem 0;
+  }
+  .main-nav__nav-item {
+    margin-right: 1rem;
+  }
+  .main-nav__nav-link {
+    font-size: 1rem;
+  }
+
+  .header__search-nav {
+    width: 220px;
+  }
+  .search-form__search-btn {
+    width: 0.75rem;
+  }
+  .search-form__search-reset-btn {
+    width: 0.75rem;
+  }
+
+  .search-form__search-input {
+    padding: 10px 8px 10px 30px;
+    font-size: 0.875rem;
+  }
+
+  .sub-nav__nav-item {
+    padding: 4px 4px 2px 4px;
+    margin-left: 10px;
+  }
+
+  .banner__small-banner {
+    width: 25%;
+  }
+  .banner__small-banner:last-child {
+    display: none;
+  }
+  .spotlight__item {
+    position: relative;
+    width: 33.33%;
+  }
+  .spotlight__item:last-child {
+    display: none;
+  }
+
+  .curation__item {
+    width: 33.33%;
+  }
+  .curation__item:last-child {
+    display: none;
+  }
+
+  .editorial__item {
+    width: 25%;
+  }
+  .editorial__item:last-child {
+    display: none;
+  }
+
+  .ranking__item-wrapper {
+    width: 33.33%;
+  }
+
+  .ranking__item-wrapper:nth-last-child(-n + 5) {
+    display: none;
+  }
+
+  .ranking-item__num {
+    color: #666;
+  }
+
+  .ranking-item__name {
+    font-size: 0.875rem;
+  }
+
+  .ranking-item__brand {
+    font-size: 0.75rem;
+  }
+
+  .footer__img-container {
+    display: flex;
+    flex: 0 0 196px;
+    flex-wrap: wrap;
+    margin: 0 -0.5rem;
+  }
+
+  .footer__category-container {
+    flex: 1 1 auto;
+  }
+
+  .footer__img-item-wrapper {
+    width: 50%;
+    padding: 0 0.5rem;
+  }
+  .footer__img-item-wrapper:nth-child(-n + 2) {
+    margin-bottom: 1rem;
+  }
+  .footer__img-item-wrapper:last-child {
+    width: 50%;
+    padding: 0 0.5rem;
+  }
+
+  .footer__container {
+    justify-content: space-between;
+  }
 }
