--- a/style.css
+++ b/style.css
@@ -55,33 +55,33 @@ ul {
 /* ----- end of reset style-----*/
 
 .wrap {
-  /* position: relative; */
+  overflow: hidden;
 }
 
 /* ----- start of header style -----*/
 
 .header {
-  position: fixed;
-  background-color: #ffffff;
-  z-index: 100;
   display: flex;
-  align-items: center;
+  position: fixed;
+  z-index: 100;
   width: 100%;
   height: 60px;
   padding: 0.625rem 0;
+  background-color: #ffffff;
+  align-items: center;
 }
 
 .header__container {
   display: flex;
   width: 100%;
-  padding: 0 2rem;
   height: 38px;
+  padding: 0 2rem;
 }
 
 .header__main-nav {
   display: flex;
-  flex: 1;
   margin-top: 13px;
+  flex: 1;
 }
 
 .header__logo {
@@ -106,51 +106,42 @@ ul {
   margin-right: 1.25rem;
 }
 
-.header__search-form {
-}
-
 .search-form {
   display: flex;
   position: relative;
 }
 
 .search-form__search-btn {
+  position: absolute;
+  left: 0.8rem;
+  width: 0.75rem;
+  height: 100%;
   background-image: url("./img/header/icon_searchbox_search.png");
   background-size: 100% auto;
   background-repeat: no-repeat;
   background-position: center;
-  position: absolute;
-
-  left: 0.8rem;
-  width: 0.75rem;
-  height: 100%;
-}
-
-.search-form__search-btn::before {
-  content: "";
 }
 
 .search-form__search-input {
-  background-color: #f7f7f7;
+  width: 100%;
+  height: auto;
+  padding: 0.5rem 1rem 0.5rem 2.15rem;
   border: none;
   border-radius: 0.375rem;
+  background-color: #f7f7f7;
   font-size: 0.75rem;
-  height: auto;
   outline: none;
-  padding: 0.5rem 1rem 0.5rem 2.15rem;
-  width: 100%;
 }
 
 .search-form__search-reset-btn {
+  position: absolute;
+  right: 0.8rem;
+  width: 1rem;
+  height: 100%;
   background-image: url("./img/header/icon_searchbox_delete.png");
   background-size: 100% auto;
   background-repeat: no-repeat;
   background-position: center;
-  position: absolute;
-
-  right: 0.8rem;
-  width: 1rem;
-  height: 100%;
 }
 
 .header__sub-nav {
@@ -159,10 +150,10 @@ ul {
 
 .sub-nav__nav-item {
   display: flex;
-  align-items: center;
+  padding: 0.25rem 0.5rem;
   font-size: 0.875rem;
   font-weight: 700;
-  padding: 0.25rem 0.5rem;
+  align-items: center;
 }
 
 .sub-nav__basket {
@@ -174,28 +165,29 @@ ul {
   width: 1.75rem;
   height: 1.75rem;
 }
+
 .sub-nav__basket-count {
+  display: block;
   position: absolute;
   top: 0;
   right: 0;
-  display: block;
-  background-color: #000000;
-  border-radius: 50%;
-  color: #ffffff;
   width: 1rem;
   height: 1rem;
-  text-align: center;
-  line-height: 1rem;
+  border-radius: 50%;
+  background-color: #000000;
+  color: #ffffff;
   font-size: 0.5rem;
   font-weight: 700;
+  line-height: 1rem;
+  text-align: center;
 }
 
-.sub-nav__long {
+.sub-nav__lang {
+  padding: 0.25rem 1.5rem 0.25rem 0.5rem;
+  background: url("./img/header/icon_header_lang_arrow_black.png") no-repeat 95%;
+  background-size: 1rem 1rem;
   font-size: 0.875rem;
   font-weight: 400;
-  background: url("./img/header/icon_header_lang_arrow_black.png") no-repeat 95%;
-  padding: 0.25rem 1.5rem 0.25rem 0.5rem;
-  background-size: 1rem 1rem;
 }
 
 /* ----- end of header style -----*/
@@ -208,9 +200,8 @@ ul {
 /* ----- start of banner style -----*/
 
 .banner__container {
-  margin: 1rem 0 7.5rem;
   width: 100%;
-
+  margin: 1rem 0 7.5rem;
   padding: 0 2rem;
 }
 
@@ -230,23 +221,23 @@ ul {
 
 .large-banner__category {
   margin: 1.25rem 0 0.25rem;
+  color: #999;
   font-size: 0.875rem;
   font-weight: 400;
-  color: #999;
 }
 
 .large-banner__title {
-  word-break: keep-all;
   margin-bottom: 1rem;
   font-weight: 500;
+  word-break: keep-all;
 }
 
 .large-banner__more {
-  color: #999;
-  border: solid 1px #ddd;
-  font-size: 0.8125rem;
-  border-radius: 0.25rem;
   padding: 0.25rem 0.75rem;
+  border: solid 1px #ddd;
+  border-radius: 0.25rem;
+  color: #999;
+  font-size: 0.8125rem;
   line-height: 1.4;
 }
 
@@ -257,13 +248,14 @@ ul {
 
 .banner__small-banner-container {
   display: flex;
+  flex-wrap: wrap;
   margin: 0 -1rem;
 }
 
 .banner__small-banner {
   display: flex;
-  margin-top: 2rem;
   width: 20%;
+  margin-top: 2rem;
   padding: 0 1rem 3.375rem 1rem;
 }
 
@@ -273,8 +265,8 @@ ul {
 
 .small-banner__info-wrapper {
   display: flex;
-  align-items: center;
   width: 50%;
+  align-items: center;
 }
 
 .small-banner__info {
@@ -284,26 +276,26 @@ ul {
 
 .small-banner__category {
   margin-bottom: 0.25rem;
+  color: #999;
   font-size: 0.875rem;
   font-weight: 400;
-  color: #999;
 }
 
 .small-banner__title {
-  word-break: keep-all;
   margin-bottom: 1rem;
   padding: 0 1rem;
   font-size: 0.875rem;
   font-weight: 400;
   line-height: 1.5;
+  word-break: keep-all;
 }
 
 .small-banner__more {
-  color: #999;
-  border: solid 1px #ddd;
-  font-size: 0.8125rem;
-  border-radius: 0.25rem;
   padding: 0.25rem 0.75rem;
+  border: solid 1px #ddd;
+  border-radius: 0.25rem;
+  color: #999;
+  font-size: 0.8125rem;
   line-height: 1.4;
 }
 
@@ -314,8 +306,8 @@ ul {
   margin-bottom: 7.5rem;
 }
 .spotlight__title {
-  padding: 0 2rem;
   margin: 1.3rem 0;
+  padding: 0 2rem;
   font-size: 1.5rem;
   font-weight: 700;
 }
@@ -330,9 +322,9 @@ ul {
 }
 
 .spotlight-item__info {
-  width: 100%;
   position: absolute;
   bottom: 1.25rem;
+  width: 100%;
   padding: 0 2rem;
   color: #666666;
 }
@@ -351,15 +343,18 @@ ul {
 
 .spotlight-item__name {
   margin-left: 4rem;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 /* ----- end of spotlight style -----*/
 
 /* ----- start of curation style -----*/
 
 .curation {
-  padding: 0 2rem;
   width: 100%;
   margin-bottom: 7.5rem;
+  padding: 0 2rem;
 }
 
 .curation__title-container {
@@ -376,12 +371,12 @@ ul {
   position: absolute;
   top: 0;
   right: 0;
-  font-size: 0.75rem;
-  font-weight: 400;
+  padding: 0.25rem 0.75rem;
   border: solid 1px #eee;
   border-radius: 0.25rem;
   color: #999;
-  padding: 0.25rem 0.75rem;
+  font-size: 0.75rem;
+  font-weight: 400;
   line-height: 1.4;
 }
 
@@ -400,13 +395,13 @@ ul {
   margin: 1.5rem 2.5rem;
 }
 .curation-item__title {
-  font-weight: 500;
   margin-bottom: 0.05rem;
+  font-weight: 500;
 }
 
 .curation-item__desc {
-  font-size: 0.865rem;
   margin-bottom: 1.5rem;
+  font-size: 0.865rem;
 }
 
 .curation__product {
@@ -421,25 +416,26 @@ ul {
 
 .product__info {
   flex: 1;
-  text-align: left;
   padding: 0 1rem;
+  text-align: left;
 }
 
 .product__name {
   margin-bottom: 0.125rem;
 }
+
 .product__brand {
-  font-size: 0.875rem;
   color: #666666;
+  font-size: 0.875rem;
 }
 /* ----- end of curation style -----*/
 
 /* ----- start of editorial style -----*/
 
 .editorial {
-  padding: 0 2rem;
   width: 100%;
   margin-bottom: 7.5rem;
+  padding: 0 2rem;
 }
 
 .editorial__title-container {
@@ -456,14 +452,15 @@ ul {
   position: absolute;
   top: 0;
   right: 0;
-  font-size: 0.75rem;
-  font-weight: 400;
+  padding: 0.25rem 0.75rem;
   border: solid 1px #eee;
   border-radius: 0.25rem;
   color: #999;
-  padding: 0.25rem 0.75rem;
+  font-size: 0.75rem;
+  font-weight: 400;
   line-height: 1.4;
 }
+
 .editorial__item-container {
   display: flex;
   margin: 0 -1rem;
@@ -489,16 +486,16 @@ ul {
 .editorial-item__desc {
   margin-bottom: 1rem;
   padding: 0 2.5rem;
-  font-size: 0.875rem;
   color: #666;
+  font-size: 0.875rem;
   word-break: keep-all;
 }
 
 .editorial-item__more {
-  color: #999;
   padding: 0.25rem 0.75rem;
   border: solid 1px #ddd;
   border-radius: 0.25rem;
+  color: #999;
   font-size: 0.8125rem;
   line-height: 1.4;
 }
@@ -507,11 +504,8 @@ ul {
 /* ----- start of ranking style -----*/
 
 .ranking {
-  padding: 0 2rem;
   margin-bottom: 7.5rem;
-}
-
-.ranking__container {
+  padding: 0 2rem;
 }
 
 .ranking__title-container {
@@ -528,22 +522,22 @@ ul {
   position: absolute;
   top: 0;
   right: 0;
-  font-size: 0.75rem;
-  font-weight: 400;
+  padding: 0.25rem 0.75rem;
   border: solid 1px #eee;
   border-radius: 0.25rem;
   color: #999;
-  padding: 0.25rem 0.75rem;
+  font-size: 0.75rem;
+  font-weight: 400;
   line-height: 1.4;
 }
 
 .ranking__list {
-  width: 100%;
-  height: 33.25rem;
-  margin: 0 -1rem;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  width: 100%;
+  height: 33.25rem;
+  margin: 0 -1rem;
 }
 
 .ranking__item-wrapper {
@@ -555,14 +549,14 @@ ul {
   display: flex;
   flex: 1 1 25%;
   height: 5.625rem;
-  align-items: center;
   margin-bottom: 1rem;
+  align-items: center;
 }
 
 .ranking-item__num {
   width: 2.5rem;
-  font-size: 1.5rem;
   color: #666666;
+  font-size: 1.5rem;
   text-align: center;
 }
 
@@ -571,18 +565,21 @@ ul {
   height: 5.625rem;
   text-align: center;
 }
+
 .ranking-item__img {
-  border-radius: 0.25rem;
-  height: 100%;
   width: auto;
+  height: 100%;
   margin: 0 auto;
+  border-radius: 0.25rem;
 }
+
 .ranking-item__info {
   flex: 1;
 }
+
 .ranking-item__brand {
-  font-size: 0.875rem;
   color: #666666;
+  font-size: 0.875rem;
 }
 /* ----- end of ranking style -----*/
 
@@ -590,12 +587,15 @@ ul {
 .footer {
   background: #f7f7f7;
 }
+
 .footer__section {
+  padding: 2rem 0 2.25rem 0;
   border-top: solid 1px #eee;
-  padding: 2rem 0 2.25rem;
 }
+
 .footer__container {
   display: flex;
+  justify-content: space-between;
   padding: 0 2rem;
 }
 
@@ -640,16 +640,9 @@ ul {
 }
 
 .footer__img-container {
-  display: flex;
-}
-
-.footer__img-item-wrapper {
-  width: 11rem;
-  padding-right: 1rem;
-}
-.footer__img-item-wrapper:last-child {
-  width: 10rem;
-  padding-right: 0;
+  display: grid;
+  grid-template-columns: repeat(4, 10rem);
+  column-gap: 1rem;
 }
 
 .footer__img-item {
@@ -665,12 +658,12 @@ ul {
 }
 
 .img-item__info {
+  display: flex;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  display: flex;
   justify-content: center;
   align-items: center;
 }
@@ -681,8 +674,8 @@ ul {
 
 /* footer info section */
 .footer-info {
-  border-top: solid 1px #eee;
   padding: 2rem 2rem 2.25rem 2rem;
+  border-top: solid 1px #eee;
 }
 
 .footer-info__container {
@@ -695,27 +688,29 @@ ul {
   font-size: 0.875rem;
   font-weight: 500;
 }
+
 .footer-info__sns-list {
   display: inline-block;
   margin-left: 1.3rem;
 }
+
 .footer-info__sns-item {
   display: inline-block;
-  margin-right: 0.6rem;
   width: 1rem;
   height: 1rem;
+  margin-right: 0.6rem;
 }
 
 .footer-info__menu {
   display: flex;
-  margin-bottom: 1rem;
   width: calc(100% - 480px);
+  margin-bottom: 1rem;
 }
 
 .footer-info__menu-item {
+  margin-right: 1rem;
   color: #999;
   font-size: 0.875rem;
-  margin-right: 1rem;
 }
 
 .footer-info__newsletter {
@@ -726,9 +721,9 @@ ul {
 }
 
 .newsletter__title {
+  margin-bottom: 0.5rem;
   font-size: 0.875rem;
   font-weight: 500;
-  margin-bottom: 0.5rem;
 }
 
 .newsletter__form {
@@ -739,12 +734,12 @@ ul {
 .newsletter__email {
   display: inline-block;
   width: calc(100% - 10.3125rem);
+  height: 2.5rem;
+  margin-right: 0.3125rem;
+  padding: 0 1rem;
   border: none;
   border-radius: 0.2rem;
-  margin-right: 0.3125rem;
-  height: 2.5rem;
   font-size: 0.875rem;
-  padding: 0 1rem;
   outline: none;
 }
 
@@ -752,8 +747,8 @@ ul {
   display: inline-block;
   width: 10rem;
   height: 2.5rem;
-  background-color: #000000;
   border-radius: 0.375rem;
+  background-color: #000000;
   color: #ffffff;
   font-size: 0.875rem;
 }
@@ -769,14 +764,14 @@ ul {
 .footer-info__company-info-list {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 0.25rem;
   width: calc(100% - 480px);
+  margin-bottom: 0.25rem;
 }
 
 .footer-info__company-info-item {
+  margin-right: 1rem;
   color: #999;
   font-size: 0.75rem;
-  margin-right: 1rem;
 }
 
 .footer-info__policy-info-list {
@@ -786,9 +781,9 @@ ul {
 }
 
 .footer-info__policy-info-item {
+  margin-right: 1rem;
   color: #999;
   font-size: 0.75rem;
-  margin-right: 1rem;
 }
 
 /* ----- end of footer style ----- */
@@ -807,9 +802,11 @@ ul {
     height: 64px;
     padding: 0.75rem 0;
   }
+
   .main-nav__nav-item {
     margin-right: 1rem;
   }
+
   .main-nav__nav-link {
     font-size: 1rem;
   }
@@ -817,9 +814,11 @@ ul {
   .header__search-nav {
     width: 220px;
   }
+
   .search-form__search-btn {
     width: 0.75rem;
   }
+
   .search-form__search-reset-btn {
     width: 0.75rem;
   }
@@ -840,10 +839,12 @@ ul {
   .banner__small-banner:last-child {
     display: none;
   }
+
   .spotlight__item {
     position: relative;
     width: 33.33%;
   }
+
   .spotlight__item:last-child {
     display: none;
   }
@@ -851,6 +852,7 @@ ul {
   .curation__item {
     width: 33.33%;
   }
+
   .curation__item:last-child {
     display: none;
   }
@@ -858,6 +860,7 @@ ul {
   .editorial__item {
     width: 25%;
   }
+
   .editorial__item:last-child {
     display: none;
   }
@@ -883,29 +886,37 @@ ul {
   }
 
   .footer__img-container {
-    display: flex;
-    flex: 0 0 196px;
-    flex-wrap: wrap;
+    grid-template-columns: repeat(2, auto);
+    width: 196px;
+    row-gap: 1rem;
+    padding: 0 0.5rem;
     margin: 0 -0.5rem;
   }
 
   .footer__category-container {
     flex: 1 1 auto;
   }
+}
 
-  .footer__img-item-wrapper {
-    width: 50%;
-    padding: 0 0.5rem;
-  }
-  .footer__img-item-wrapper:nth-child(-n + 2) {
-    margin-bottom: 1rem;
-  }
-  .footer__img-item-wrapper:last-child {
-    width: 50%;
-    padding: 0 0.5rem;
+@media (max-width: 1024px) {
+  .header {
+    height: 53px;
   }
 
-  .footer__container {
-    justify-content: space-between;
+  .sub-nav__lang {
+    display: none;
+  }
+
+  .banner__large-banner {
+    width: 50%;
+  }
+
+  .banner__small-banner-container {
+    margin-top: 2rem;
+  }
+
+  .banner__small-banner {
+    width: 50%;
+    margin-top: 0;
   }
 }
